test_case/rust-lang_rust/29652_154353581.rs
 Rust
enum Foo { Bar }

fn main() {
    Foo.bar(); //~ ERROR unresolved name `Foo`
}
